@@ -63,6 +63,9 @@ pkg_config() {
 	if [ ! -e "${EPREFIX}${REDMINE_DIR}"/plugins/redmine_git_hosting/ssh_keys/redmine_gitolite_admin_id_rsa ]; then
 		einfo "Generating SSH-Keypair for Redmine user"
 		ssh-keygen -N '' -f "${EPREFIX}${REDMINE_DIR}"/plugins/redmine_git_hosting/ssh_keys/redmine_gitolite_admin_id_rsa || die
-		chown redmine:redmine "${EPREFIX}${REDMINE_DIR}"/plugins/redmine_git_hosting/ssh_keys/redmine_gitolite_admin_id_rsa{,.pub} || die
+		chown redmine:redmine "${EPREFIX}${REDMINE_DIR}"/plugins/redmine_git_hosting/ssh_keys/redmine_gitolite_admin_id_rsa\
+			 "${EPREFIX}${REDMINE_DIR}"/plugins/redmine_git_hosting/ssh_keys/redmine_gitolite_admin_id_rsa.pub || die
+		touch "${EPREFIX}${REDMINE_DIR}"/log/git_hosting.log
+		chown redmine:redmine "${EPREFIX}${REDMINE_DIR}"/log/git_hosting.log || die
 	fi
 }
