@@ -8,6 +8,9 @@
   [www-apps/redmine_git_hosting] Fix pkg_config.
 
   22 Apr 2014; Manuel Rüger <mrueg@gentoo.org> redmine_git_hosting-0.7.2.ebuild:
+  [www-apps/redmine_git_hosting] Fix pkg_config.
+
+  22 Apr 2014; Manuel Rüger <mrueg@gentoo.org> redmine_git_hosting-0.7.2.ebuild:
   [www-apps/redmine_git_hosting] Add pkg_config.
 
   22 Apr 2014; Manuel Rüger <mrueg@gentoo.org> redmine_git_hosting-0.7.2.ebuild:
